<resources>
    <string name="app_name">Medicarium</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fingerprintLabel">Unlock with your fingerprint</string>
    <string name="authPinLink">Use pin instead</string>


    <!-- Fingerprint -->
    <string name="fingerprint_too_many_attempts_error">Too many failed attempts. Please use pin instead.</string>
    <string name="biometric_not_supported">Fingerprint not supported. Please use pin instead.</string>

    <!-- Generic stuff -->
    <string name="success_msg">Success!</string>
    <string name="failed_try_again">Failed. Please try again.</string>
    <string name="forgot_pin">Forgot pin?</string>
    <string name="logo_text">Medicarium</string>
    <string name="sign_up_welcome_desc_text">Create an account</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>`
    <string name="phone_number_hint">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="verify_identity_title">Verify Identity</string>
    <string name="verify_identity_desc">We sent a SMS with  \n the verification code to the number:</string>
    <string name="sms_verification_hint">Enter the code here</string>
    <string name="sms_verification_button">Verify</string>
    <string name="login_text">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin">PIN</string>
    <string name="setup_pin_description">In order to improve the privacy of your data, please setup a 4 digits PIN code</string>
    <string name="choose_a_pin_code_title">Choose a PIN code</string>
    <string name="create_account">Create Account</string>
    <string name="resend_code">Resend code</string>
    <string name="medical_tests">Medical Records</string>
    <string name="pulmonology">Pulmonology</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="add_new_record">Add New Record</string>
    <string name="add_record">Add Record</string>
    <string name="edit_medical_record">Edit Medical Record</string>
    <string name="type_name">Type the name</string>
    <string name="ok_text_caps">OK</string>
    <string name="cancel_text_caps">CANCEL</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="type_first_name">Type your first name</string>
    <string name="type_last_name">Type the last name</string>
    <string name="type_weight">Type your weight</string>
    <string name="type_height">Type the height</string>

    <string name="terms">Terms and conditions

    These terms and conditions ("Terms", "Agreement") are an agreement between Mobile Application Developer ("Mobile Application Developer", "us", "we" or "our") and you ("User", "you" or "your"). This Agreement sets forth the general terms and conditions of your use of the Medicarium mobile application and any of its products or services (collectively, "Mobile Application" or "Services").

    Accounts and membership

    If you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may, but have no obligation to, monitor and review new accounts before you may sign in and use our Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions.

    User content

    We do not own any data, information or material ("Content") that you submit in the Mobile Application in the course of using the Service. You shall have sole responsibility for the accuracy, quality, integrity, legality, reliability, appropriateness, and intellectual property ownership or right to use of all submitted Content. We may, but have no obligation to, monitor and review Content in the Mobile Application submitted or created using our Services by you. Unless specifically permitted by you, your use of the Mobile Application does not grant us the license to use, reproduce, adapt, modify, publish or distribute the Content created by you or stored in your user account for commercial, marketing or any similar purpose. But you grant us permission to access, copy, distribute, store, transmit, reformat, display and perform the Content of your user account solely as required for the purpose of providing the Services to you.

    Backups

    We perform regular backups of the Content and will do our best to ensure completeness and accuracy of these backups. In the event of the hardware failure or data loss we will restore backups automatically to minimize the impact and downtime.

    Links to other mobile applications

    Although this Mobile Application may link to other mobile applications, we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked mobile application, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their mobile applications. We do not assume any responsibility or liability for the actions, products, services, and content of any other third-parties. You should carefully review the legal statements and other conditions of use of any mobile application which you access through a link from this Mobile Application. Your linking to any other off-site mobile applications is at your own risk.

    Changes and amendments

    We reserve the right to modify this Agreement or its policies relating to the Mobile Application or Services at any time, effective upon posting of an updated version of this Agreement in the Mobile Application. When we do, we will post a notification in our Mobile Application. Continued use of the Mobile Application after any such changes shall constitute your consent to such changes. Policy was created with https://www.WebsitePolicies.com

    Acceptance of these terms

    You acknowledge that you have read this Agreement and agree to all its terms and conditions. By using the Mobile Application or its Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to use or access the Mobile Application and its Services.

    Contacting us

    If you have any questions about this Agreement, please contact us.

    This document was last updated on June 16, 2019</string>
    <string name="emergency_mode">Emergency Mode</string>
    <string name="close">Close</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="old_pin_code">Old PIN code</string>
    <string name="new_pin_code">New PIN code</string>
    <string name="confirm_new_pin_code">Confirm new PIN code</string>
    <string name="change_pin">Change PIN</string>
</resources>
