<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.medicarium.Presentation.Pin.SetupPinFragment">

    <data>

        <variable
            name="setupPinViewModel"
            type="com.medicarium.Presentation.Pin.SetupPinViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/ConstraintLayoutContainer">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/choose_a_pin_code_title"
            android:textColor="@color/primaryBlack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/pin_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/setup_pin_description"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkGrey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <com.poovam.pinedittextfield.LinePinField
            android:id="@+id/pinEntry"
            style="@style/PinLineEntry"
            android:layout_marginTop="48dp"
            android:hint="@string/pin"
            android:text="@={setupPinViewModel.pinCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

        <com.poovam.pinedittextfield.LinePinField
            android:id="@+id/confirmPinEntry"
            style="@style/PinLineEntry"
            android:layout_marginTop="48dp"
            android:hint="@string/confirm_pin"
            android:text="@={setupPinViewModel.confirmPinCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinEntry" />

        <Button
            android:id="@+id/continueButton"
            style="@style/BaseButton"
            android:layout_marginBottom="64dp"
            android:text="@string/continue_text"
            android:enabled="@{setupPinViewModel.isContinueEnabled}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
