<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Presentation.Signup.SignupFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="signUpViewModel"
            type="com.medicarium.Presentation.Signup.SignupViewModel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pureWhite">

        <com.medicarium.Presentation.CustomControls.CustomNavigationBar
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navbarTitle="@string/create_account"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameTextInput"
                    style="@style/SignUpTextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameEditText"
                        style="@style/BaseEditText"
                        android:hint="@string/first_name_hint"
                        android:nextFocusDown="@id/lastNameEditText"
                        android:text="@={signUpViewModel.user.firstName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameTextInput"
                    style="@style/SignUpTextInputLayout"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameTextInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameEditText"
                        style="@style/BaseEditText"
                        android:hint="@string/last_name_hint"
                        android:nextFocusDown="@id/emailEditText"
                        android:text="@={signUpViewModel.user.lastName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInput"
                    style="@style/SignUpTextInputLayout"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lastNameTextInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        style="@style/BaseEditText"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@id/phoneNumberEditText"
                        android:text="@={signUpViewModel.user.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumberTextInput"
                    style="@style/SignUpTextInputLayout"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailTextInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberEditText"
                        style="@style/BaseEditText"
                        android:hint="@string/phone_number_hint"
                        android:inputType="phone"
                        android:nextFocusDown="@id/passwordEditText"
                        android:text="@={signUpViewModel.user.phoneNumber}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInput"
                    style="@style/SignUpTextInputLayout"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneNumberTextInput"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        style="@style/BaseEditText"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:nextFocusDown="@id/confirmPasswordEditText"
                        android:text="@={signUpViewModel.user.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordTextInput"
                    style="@style/SignUpTextInputLayout"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordTextInput"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordEditText"
                        style="@style/BaseEditText"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:text="@={signUpViewModel.user.confirmPassword}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/continueButton"
                    style="@style/BaseButton"
                    android:layout_marginTop="32dp"
                    android:enabled="@{signUpViewModel.isContinueEnabled}"
                    android:text="@string/continue_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInput" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>

